--- a/src/styles/table.module.scss
+++ b/src/styles/table.module.scss
@@ -1,19 +1,27 @@
 @import "variables.scss";
 .container {
   width: 100%;
-  height: 80%;
+  height: 85%;
   border-radius: 10px;
   background-color: white;
-  overflow: scroll;
 }
 
 .column {
   width: 100%;
-  padding: 20px 20px;
+  padding: 18px 18px;
   display: grid;
   justify-content: center;
   grid-template-columns: 1fr 3fr 2fr 6fr 1fr 1fr 1fr;
   border-bottom: 1px solid $border;
+}
+
+.productlist {
+  width: 100%;
+  height: 525px;
+  overflow: scroll;
+}
+.productlist::-webkit-scrollbar {
+  display: none;
 }
 
 .textContaier {
@@ -25,6 +33,7 @@
 }
 
 .divisionText {
+  margin: 0;
   font-size: 14px;
   font-weight: bold;
   text-align: center;
