feat : 페이지 수 동적 변경 구현

--- a/src/styles/pagination.module.scss
+++ b/src/styles/pagination.module.scss
@@ -32,7 +32,10 @@
 }
 
 .button {
+  width: 26px;
+  height: 26px;
   border-radius: 3px;
   border: 1px solid $border;
   cursor: pointer;
+  background-color: white;
 }
