feat : 검색 기능 구현

--- a/src/styles/pagination.module.scss
+++ b/src/styles/pagination.module.scss
@@ -51,3 +51,11 @@
   cursor: pointer;
   background-color: $buttonClicked;
 }
+
+.more {
+  width: 26px;
+  height: 26px;
+  border-radius: 3px;
+  cursor: pointer;
+  background-color: white;
+}
