bug : description 밀림 현상 해결

--- a/src/styles/table.module.scss
+++ b/src/styles/table.module.scss
@@ -43,6 +43,39 @@
 
 .columnText {
   margin: 0 auto;
+  max-width: 100px;
+  font-size: 12px;
+  font-weight: bold;
+  text-align: center;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.columnText_title {
+  margin: 0 auto;
+  max-width: 150px;
+  font-size: 12px;
+  font-weight: bold;
+  text-align: center;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.columnText_brand {
+  margin: 0 auto;
+  max-width: 150px;
+  font-size: 12px;
+  font-weight: bold;
+  text-align: center;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.columnText_description {
+  margin: 0 auto;
   max-width: 250px;
   font-size: 12px;
   font-weight: bold;
